feat: Add exam scope info to userexaminfo put api
