# WaplMath/src/main/java/com/tmax/WaplMath/Recommend/dto/UserExamInfoDTO.java
@@ -1,5 +1,7 @@
 package com.tmax.WaplMath.Recommend.dto;
 
+import java.util.List;
+
 import lombok.Data;
 
 @Data
@@ -8,4 +10,7 @@ public class UserExamInfoDTO {
 	public String examStartDate;
 	public String examDueDate;
 	public Integer targetScore;
+	public String startSubSectionId;
+	public String endSubSectionId;
+	public List<String> exceptSubSectionIdList;
 }
